--- a/html/下拉.html
+++ b/html/下拉.html
@@ -60,7 +60,7 @@ details + dl {
     <dd><a href>关注的商品</a></dd>
     <dd><a href>关注的店铺</a></dd>
     <dd><a href>关注的专辑</a></dd>
-    <dd><a href>收藏的内容</a></dd>
+    <dd><a href>收藏的内容uuu</a></dd>
 </dl>
 </body>
 </html>
